--- a/public/index.html
+++ b/public/index.html
@@ -48,8 +48,8 @@
                                 <input type="number" id="kondisjon-km" step="0.1" min="0" required>
                             </div>
                             <div class="form-group">
-                                <label for="kondisjon-tid">Tid (minutter):</label>
-                                <input type="number" id="kondisjon-tid" min="0" required>
+                                <label for="kondisjon-tid">Tid (HH:MM:SS eller MM:SS):</label>
+                                <input type="text" id="kondisjon-tid" placeholder="1:25:30 eller 25:30" pattern="^([0-9]+:)?[0-9]{1,2}:[0-9]{2}$" title="Format: HH:MM:SS eller MM:SS (f.eks. 1:25:30 eller 25:30)" required>
                             </div>
                         </div>
                         <div class="form-row">
@@ -134,8 +134,8 @@
                                             <input type="number" class="ovelse-vekt" step="0.5" min="0" required>
                                         </div>
                                         <div class="form-group">
-                                            <label>Tid (min):</label>
-                                            <input type="number" class="ovelse-tid" min="1" placeholder="Valgfritt">
+                                            <label>Tid (HH:MM:SS eller MM:SS):</label>
+                                            <input type="text" class="ovelse-tid" placeholder="1:05:30 eller 65:30" pattern="^([0-9]+:)?[0-9]{1,2}:[0-9]{2}$">
                                         </div>
                                     </div>
                                     <div class="form-group">
@@ -213,8 +213,8 @@
                             <input type="date" id="lagidrett-dato" required>
                         </div>
                         <div class="form-group">
-                            <label for="lagidrett-tid">Tid (minutter):</label>
-                            <input type="number" id="lagidrett-tid" min="0" required>
+                            <label for="lagidrett-tid">Tid (HH:MM:SS eller MM:SS):</label>
+                            <input type="text" id="lagidrett-tid" placeholder="1:30:00 eller 90:00" pattern="^([0-9]+:)?[0-9]{1,2}:[0-9]{2}$" title="Format: HH:MM:SS eller MM:SS (f.eks. 1:30:00 eller 90:00)" required>
                         </div>
                         <div class="form-row">
                             <div class="form-group">
